--- a/package.json
+++ b/package.json
@@ -58,12 +58,14 @@
     "framer-motion": "^11.18.2",
     "gl-matrix": "^3.4.3",
     "gsap": "^3.13.0",
+    "hls.js": "^1.6.2",
     "howler": "^2.2.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "matter-js": "^0.20.0",
     "memorystore": "^1.6.7",
     "meshline": "^3.3.1",
+    "next": "^15.3.2",
     "next-themes": "^0.4.5",
     "ogl": "^1.0.11",
     "passport": "^0.7.0",
