--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-useanimations": "^2.10.0",
     "recharts": "^2.13.0",
     "sonner": "^1.7.4",
+    "styled-components": "^6.1.18",
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
